2004-11-10  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scm/define-grobs.scm (all-grob-descriptions): Added
	line-interface to the LigatureBracket object.

2004-11-10  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/framework-gnome.scm (item-event): Support non-animated mouse
	dragging tweaks.

	* lily/lily-guile.cc (ly_to_string, ly_to_symbol): New function.

	* lily/context-selector.cc (store_context): New function.

	* lily/grob-selector.cc (register_grob)[TWEAK]: Apply tweak.
	(store_grob): New function.
	(identify_grob): Add Moment parameter.

	* lily/lily-parser.cc (parse_file)[TWEAK]: Read .ly.t file if it
	exists.

	* scm/framework-gnome.scm (save-tweaks): Write as alist.

2004-11-09  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/framework-gnome.scm (item-event): Print grob id.
	(save-tweaks): New function.
	(tweak): New funtion.
	(item-event): Use it, bound to arrow keys.

	* lily/context-property.cc (make_item_from_properties): Register grob.
	* lily/context.cc (add_context): Register context.

	* lily/include/context-selector.hh:
	* lily/include/grob-selector.hh:
	* lily/context-selector.cc:
	* lily/grob-selector.cc: New file.

2004-11-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/slur.cc: add 'positions to interface

	* lily/main.cc: reinstate PS as standard output format. 

	* scm/framework-tex.scm (output-preview-framework): print systems
	up to first non title system.

	* lily/grace-engraver.cc (start_translation_timestep): split
	scm_cadddr
	
2004-11-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/quote-iterator.cc (Module): remove old quote-iterator

	* scm/define-music-types.scm (music-descriptions): move
	NewQuoteMusic over QuoteMusic

	* Documentation/user/notation.itely (Formatting cue notes): use
	\cueDuring.

	* lily/new-quote-iterator.cc (quote_ok): new function.

	* input/regression/quote-cue-during.ly: new file.

	* input/regression/quote-grace.ly: new file.

	* scm/define-context-properties.scm (Module): change definition of