@@ -1,3 +1,10 @@
+2004-11-10  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* scm/framework-gnome.scm (item-event): Add support from TLA.  Support
+	animated/opaque grob dragging tweaks.
+
+	* buildscripts/guile-gnome.sh: Update.
+
 2004-11-10  Mats Bengtsson  <mabe@drongo.s3.kth.se>
 
 	* scm/define-grobs.scm (all-grob-descriptions): Added
